# BeerPong-robot-software

./: .gitmodules  CMakeLists.txt  Main.cpp  OpenCVCamera.sln  README.md  videoTest.cpp
Docs/: WebResources.md
OpenCVCamera/: HelloWorld.txt  LOL.txt  Main.cpp  OpenCVCamera.vcxproj  OpenCVCamera.vcxproj.filters
